# SRIX4K-Reader

./: .gitignore  CMakeLists.txt  README.md  error.h  main.c  reader.c  reader.h  srix.c  srix.h  srixflag.c  srixflag.h
